; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_stream.c_bits_skip.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_stream.c_bits_skip.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @bits_skip to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @bits_skip(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = icmp sle i32 %6, 0
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  store i32 0, i32* %3, align 4
  br label %22

9:                                                ; preds = %2
  br label %10

10:                                               ; preds = %13, %9
  %11 = load i32, i32* %5, align 4
  %12 = icmp sgt i32 %11, 32
  br i1 %12, label %13, label %18

13:                                               ; preds = %10
  %14 = load i32*, i32** %4, align 8
  %15 = call i32 @bits_get(i32* %14, i32 32)
  %16 = load i32, i32* %5, align 4
  %17 = sub nsw i32 %16, 32
  store i32 %17, i32* %5, align 4
  br label %10

18:                                               ; preds = %10
  %19 = load i32*, i32** %4, align 8
  %20 = load i32, i32* %5, align 4
  %21 = call i32 @bits_get(i32* %19, i32 %20)
  store i32 0, i32* %3, align 4
  br label %22

22:                                               ; preds = %18, %8
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i32 @bits_get(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
